[package]
name = "concurrency"
version = "0.1.0"
edition = "2021"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
oneshot = "0.1.11"
wide = "0.7"

[dev-dependencies]
benchmark = "0.1.0"
criterion = "0.6.0"

[[bench]]
name = "my_benchmark"
harness = false
